--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,17 @@
-.App {
-  min-height: 100vh;
-  background-image: url("https://images.unsplash.com/photo-1519852476561-ec618b0183ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=856&q=80");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+.wrapper {
+  min-height: 70vh;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.center Form {
+  width: 400px;
+  background-color: rgba(120, 100, 100, 0.178);
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.3);
 }
